--- a/css/styles.css
+++ b/css/styles.css
@@ -34,6 +34,10 @@ address {
   margin: 0 auto;
 }
 
+img {
+  display: block;
+}
+
 ul {
   list-style: none;
   margin-top: 0;
@@ -123,7 +127,7 @@ ul {
 }
 
 .hero-container {
-  padding: 188px 472px 292px 472px;
+  padding: 188px 0;
   flex-shrink: 0;
 }
 
@@ -135,7 +139,8 @@ ul {
   line-height: 1.07;
   letter-spacing: 0.02em;
   max-width: 496px;
-  margin-bottom: 48px;
+  margin: 0 auto 48px;
+  display: inline-block;
 }
 
 .hero-button {
@@ -149,11 +154,12 @@ ul {
   background-color: #4d5ae5;
   border: none;
   border-radius: 4px;
-  display: inline-flex;
+  display: block;
   padding: 16px 32px;
   align-items: flex-start;
   gap: 10px;
   margin: 0 auto;
+  min-width: 169px;
 }
 
 .hero-button:hover {
@@ -165,6 +171,14 @@ ul {
 }
 
 /*------------features-------------*/
+
+.visually-hidden {
+  visibility: hidden;
+}
+
+.features-container {
+  padding: 120px 0;
+}
 
 .features-list {
   display: flex;
