--- a/css/styles.css
+++ b/css/styles.css
@@ -46,16 +46,19 @@ ul {
 }
 
 .header-container {
+  width: 1158px;
   padding-top: 24px;
   padding-bottom: 24px;
   display: flex;
   width: 1440px;
   height: 72px;
   flex-shrink: 0;
+  border-bottom: 1px solid #e7e9fc;
 }
 
 .header-navigation {
   display: flex;
+  align-items: center;
 }
 
 .header-logo {
@@ -66,6 +69,7 @@ ul {
   line-height: 1.17;
   letter-spacing: 0.03em;
   text-transform: uppercase;
+  margin-right: 76px;
 }
 
 .header-logo-span {
