--- a/css/styles.css
+++ b/css/styles.css
@@ -231,6 +231,15 @@ ul {
   margin: 0 auto 72px;
 }
 
+.team-card-list-container {
+  display: flex;
+  width: 232px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+}
+
 .team-card-list {
   display: flex;
   gap: 24px;
@@ -266,7 +275,8 @@ ul {
 .portfolio-list {
   display: flex;
   flex-wrap: wrap;
-  gap: 24px;
+  gap: 48px 24px;
+  padding: 120px o 120px 0;
   background-color: #ffffff;
 }
 
@@ -276,8 +286,21 @@ ul {
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
-  gap: 8px;
+  margin-bottom: 8px;
   align-self: stretch;
+}
+
+.portfolio-item {
+  border: 1px solid var(--CORNFLOWER, #e7e9fc);
+  background: var(--WHITE, #fff);
+  display: flex;
+  width: 360px;
+  height: 420px;
+  padding-bottom: 32px;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 32px;
+  flex-shrink: 0;
 }
 
 .portfolio-titel {
