--- a/css/styles.css
+++ b/css/styles.css
@@ -47,13 +47,12 @@ ul {
 
 .header-container {
   width: 1158px;
-  padding-top: 24px;
-  padding-bottom: 24px;
+  padding: 0 15px;
   display: flex;
-  width: 1440px;
   height: 72px;
   flex-shrink: 0;
-  border-bottom: 1px solid #e7e9fc;
+  border-bottom: 1px solid var(--CORNFLOWER, #e7e9fc);
+  background: var(--WHITE, #fff);
 }
 
 .header-navigation {
@@ -177,7 +176,16 @@ ul {
 /*------------features-------------*/
 
 .visually-hidden {
-  visibility: hidden;
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
 
 .features-container {
@@ -219,14 +227,6 @@ ul {
   background-color: #f4f4fd;
 }
 
-.team-card-item-f {
-  border-radius: 0px 0px 4px 4px;
-  background: var(--WHITE, #fff);
-  box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
-    0px 1px 1px 0px rgba(46, 47, 66, 0.16),
-    0px 1px 6px 0px rgba(46, 47, 66, 0.08);
-}
-
 .team-card-titel {
   color: var(--NAVY-BLUE, #2e2f42);
   text-align: center;
@@ -237,11 +237,6 @@ ul {
   text-transform: capitalize;
   width: 100%;
   margin: 0 auto 72px;
-  border-radius: 0px 0px 4px 4px;
-  background: var(--WHITE, #fff);
-  box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
-    0px 1px 1px 0px rgba(46, 47, 66, 0.16),
-    0px 1px 6px 0px rgba(46, 47, 66, 0.08);
 }
 
 .team-card-list-container {
@@ -251,6 +246,7 @@ ul {
   justify-content: center;
   align-items: center;
   gap: 8px;
+  padding: 32px 0;
 }
 
 .team-card-list {
@@ -260,6 +256,11 @@ ul {
 
 .team-card-item {
   background-color: #ffffff;
+  border-radius: 0px 0px 4px 4px;
+  background: var(--WHITE, #fff);
+  box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
+    0px 1px 1px 0px rgba(46, 47, 66, 0.16),
+    0px 1px 6px 0px rgba(46, 47, 66, 0.08);
 }
 
 .team-card-titei-list {
@@ -269,6 +270,7 @@ ul {
   font-weight: 500;
   line-height: 1.2;
   letter-spacing: 0.02em;
+  margin-bottom: 8px;
 }
 
 .team-card-text {
